[package]
name = "open-fastrlp"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Fast RLP serialization library. This crate is a yanked version of FastRLP 0.1.2 which was Apache licensed"
repository = "https://github.com/gakonst/open-fastrlp"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
auto_impl = "1"
bytes = { version = "1", default-features = false }
ethnum = { version = "1", default-features = false, optional = true }
ethereum-types = { version = "0.14", features = ["codec"], optional = true }
rlp-derive = { package = "open-fastrlp-derive", version = "0.1", path = "../rlp-derive", optional = true }

[dev-dependencies]
rlp-test = { path = ".", package = "open-fastrlp", features = [
    "derive",
    "std",
    "ethnum",
    "ethereum-types",
] }
criterion = "0.4.0"
hex-literal = "0.3"

[features]
alloc = []
derive = ["rlp-derive"]
std = ["alloc"]

[[bench]]
name = "bench"
harness = false
